objects/Scratch_Org_Project_Template__c.object
<CustomObject>
    <fields>
        <fullName>Api_Version__c</fullName>
        <label>Api Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>41.0</fullName>
                    <default>true</default>
                    <label>41.0</label>
                </value>
                <value>
                    <fullName>40.0</fullName>
                </value>
                <value>
                    <fullName>39.0</fullName>
                </value>
                <value>
                    <fullName>38.0</fullName>
                </value>
                <value>
                    <fullName>37.0</fullName>
                </value>
                <value>
                    <fullName>36.0</fullName>
                </value>
                <value>
                    <fullName>35.0</fullName>
                </value>
                <value>
                    <fullName>34.0</fullName>
                </value>
                <value>
                    <fullName>33.0</fullName>
                </value>
                <value>
                    <fullName>32.0</fullName>
                </value>
                <value>
                    <fullName>31.0</fullName>
                </value>
                <value>
                    <fullName>30.0</fullName>
                </value>
                <value>
                    <fullName>29.0</fullName>
                </value>
                <value>
                    <fullName>28.0</fullName>
                </value>
                <value>
                    <fullName>27.0</fullName>
                </value>
                <value>
                    <fullName>26.0</fullName>
                </value>
                <value>
                    <fullName>25.0</fullName>
                </value>
                <value>
                    <fullName>24.0</fullName>
                </value>
                <value>
                    <fullName>23.0</fullName>
                </value>
                <value>
                    <fullName>22.0</fullName>
                </value>
                <value>
                    <fullName>21.0</fullName>
                </value>
                <value>
                    <fullName>20.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Developer_Hub_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer Hub Org</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Org__c.is_Developer_Hub_Org__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only developer hub org credentials can be selected</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Org__c</referenceTo>
        <relationshipName>Scratch_Org_Artifacts_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <label>Namespace</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_JSON__c</fullName>
        <label>Project JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Login_Url__c</fullName>
        <defaultValue>&apos;https://login.salesforce.com&apos;</defaultValue>
        <label>SFDC Login Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Source_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Org Credential</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Scratch Org Project Templates (Source Org Credential)</relationshipLabel>
        <relationshipName>Scratch_Org_Project_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Scratch Org Project Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Developer_Hub_Org__c</columns>
        <columns>Source_Org_Credential__c</columns>
        <columns>Api_Version__c</columns>
        <columns>SFDC_Login_Url__c</columns>
        <columns>Namespace__c</columns>
        <columns>Project_JSON__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scratch Org Artifacts Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scratch Org Project Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>